get ng-repeat to work as wanted

--- a/views/topstories.html
+++ b/views/topstories.html
@@ -5,7 +5,7 @@
 </ul>
 
 <ul>
-  <li ng-repeat="post in topStories.completePosts">
+  <li ng-repeat="post in topStories.posts">
     {{ post }}
   </li>
 </ul>
