--- a/views/post.html
+++ b/views/post.html
@@ -1,5 +1,7 @@
 <div>
   <h1>{{ post.title }}</h1>
   <h4>By {{ post.by }}</h4>
+  <p>Score: {{ post.score }}</p>
+  <p>Comments: {{ post.kids.length }}</p>
   <a href="{{ post.url }}">{{ post.url }}</a>
 </div>
