--- a/views/topstories.html
+++ b/views/topstories.html
@@ -5,5 +5,6 @@
     <h4><a ui-sref="post({ id: post.id })">{{ post.title }}</a></h4>
     <p>Score: {{ post.score }}</p>
     <p>Comments: {{ post.kids.length }}</p>
+    <a href="{{ post.url }}">{{ post.url }}</a>
   </li>
 </ul>
