--- a/views/topstories.html
+++ b/views/topstories.html
@@ -4,7 +4,17 @@
   <li ng-repeat="post in topStories.posts">
     <h4><a ui-sref="post({ id: post.id })">{{ post.title }}</a></h4>
     <p>Score: {{ post.score }}</p>
-    <p>Comments: {{ post.kids.length }}</p>
+    <p>Comments: {{ post.descendants }}</p>
     <a href="{{ post.url }}">{{ post.url }}</a>
   </li>
 </ul>
+
+<h4>Page {{ topStories.pageCount }}</h4>
+
+<div ng-if="topStories.pageCount > 1">
+  <a href="" ng-click="topStories.previousPage()">Previous</a>
+</div>
+
+<div ng-if="topStories.pageCount < 17">
+  <a href="" ng-click="topStories.nextPage()">Next</a>
+</div>
