--- a/views/post.html
+++ b/views/post.html
@@ -1,8 +1,12 @@
-<div ng-if="post.data">
-  <a href="{{post.data.url}}" target="_blank">{{post.data.title}}</a>
-  <a>{{post.data.description}} comments {{post.data.score}} points</a>
+<div class="post" ng-if="post.data">
+  <a class="post__title" href="{{ post.data.url }}" target="_blank">
+    {{ post.data.title }}
+  </a>
+  <a class="post__description">
+    {{ post.data.descendants }} comments {{ post.data.score }} points
+  </a>
 
-  <ul>
+  <ul class="comments">
     <li ng-repeat="comment in post.data.kids">
       <item id="comment"></item>
     </li>
