--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,6 +1,6 @@
-<h2>Today's Top Hacker News Stories</h1>
+<h2>Today's Top Hacker News Stories</h2>
 <ul>
-    <li ng-repeat="story in vm.stories">
-        {{ story }}
+    <li ng-repeat="story in vm.stories" >
+      <story id="story"></story>
     </li>
 </ul>
