author, time added to view

--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,6 +1,6 @@
-<h2>Today's Top Hacker News Stories</h2>
-<ul>
+<h2>Hacker News Stories</h2>
+<ol>
     <li ng-repeat="story in vm.stories" >
       <story id="story"></story>
     </li>
-</ul>
+</ol>
