--- a/views/story.html
+++ b/views/story.html
@@ -1,1 +1,14 @@
-my story
+<div>
+  <strong><a href="{{vm.url}}">{{ vm.title }}</a></strong> {{ vm.domain }}
+</div>
+<div>
+  <ng-pluralize count="vm.score"
+    when="{
+    '0': '0 points',
+    '1': '1 point',
+    'other': '{} points'
+    }">
+    </ng-pluralize>
+    by {{ vm.author }}, {{ vm.time }} hours ago
+
+</div>
