added fake hide link

--- a/views/story.html
+++ b/views/story.html
@@ -9,6 +9,6 @@
     'other': '{} points'
     }">
     </ng-pluralize>
-    by {{ vm.author }}, {{ vm.time }} hours ago
+    by {{ vm.author }}, {{ vm.time }} | <a href="#">Hide</a>
 
 </div>
