--- a/views/story.html
+++ b/views/story.html
@@ -3,12 +3,16 @@
 </div>
 <div>
   <ng-pluralize count="vm.score"
+    when="{ '1': '1 point', 'other': '{} points'}">
+  </ng-pluralize>
+
+    by {{ vm.author }}, {{ vm.time }} | <a href="#">Hide</a> | 
+
+  <ng-pluralize count="vm.commentsCount"
     when="{
-    '0': '0 points',
-    '1': '1 point',
-    'other': '{} points'
-    }">
-    </ng-pluralize>
-    by {{ vm.author }}, {{ vm.time }} | <a href="#">Hide</a>
+    '1': '1 comment',
+    'other': '{} comments'
+    }">    
+  </ng-pluralize>
 
 </div>
