--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,6 +1,6 @@
 <h2>Hacker News Stories</h2>
 <ol start="{{ vm.start }}">
-    <li dir-paginate="story in vm.stories | itemsPerPage: 30" >
+    <li dir-paginate="story in vm.stories | itemsPerPage: 30" current-page="currentPage" >
       <story id="story"></story>
     </li>
 </ol>
