--- a/js/app/views/item.html
+++ b/js/app/views/item.html
@@ -4,9 +4,21 @@
       <a class="item__title" href="{{ item.data.url }}" target="_blank">
         {{ item.data.title }}
       </a>
+      <a class="item__description" ui-sref="post({id: item.data.id})">
+        {{ item.data.descendants }} comments {{ item.data.score }} points
+      </a>
     </div>
     <div ng-switch-when="comment">
-      {{ item.data.text }}
+      <div class="item__author">
+        {{ item.data.by }}
+      </div>
+      {{ (item.data.time * 1000) | date: 'short'}}
+      <div ng-bind-html="item.data.text"></div>
+      <ul class="comments">
+        <li ng-repeat="comment in item.data.kids">
+          <item  id="comment"></item>
+        </li>
+      </ul>
     </div>
   </div>
 
