--- a/js/app/views/top_stories.html
+++ b/js/app/views/top_stories.html
@@ -1,7 +1,7 @@
 <div>
   <ul class="posts">
     <li ng-repeat="post in top.posts">
-      <item id="post"></item>
+      <item id="post" index="$index"></item>
     </li>
   </ul>
 
