Added notes.md and added a few minor details to the top stories template

--- a/js/app/views/top_stories.html
+++ b/js/app/views/top_stories.html
@@ -7,10 +7,10 @@
 
   <ul class="pagination">
     <li ng-if="top.page > 0">
-      <a href="" ng-click="top.lastPage()">Last Page << </a>
+      <a href="" ng-click="top.lastPage()">Previous <<</a>
     </li>
     <li ng-if="top.page < top.totalPages - 1">
-      <a href="" ng-click="top.nextPage()"> >> Next Page</a>
+      <a href="" ng-click="top.nextPage()"> >> Next</a>
     </li>
   </ul>
 </div>
