--- a/js/app/views/item.html
+++ b/js/app/views/item.html
@@ -2,10 +2,10 @@
   <div ng-switch="item.data.type">
     <div ng-switch-when="story">
       <a class="item__title" href="{{ item.data.url }}" target="_blank">
-        {{ item.index + 1 }}: {{ item.data.title }}
+        {{ item.index + 1 }}: {{ item.data.title }} ({{ item.data.url.split("/")[2] }})
       </a>
       <a class="item__description" ui-sref="post({id: item.data.id})">
-        {{ item.data.descendants }} comments {{ item.data.score }} points {{ (item.data.time * 1000) | date: 'short'}}
+        by {{ item.data.by }} | {{ item.data.descendants }} comments | {{ item.data.score }} points | {{ (item.data.time * 1000) | date: 'short'}}
       </a>
     </div>
     <div ng-switch-when="comment">
