listed news id's on the html using ui-router

--- a/views/top.html
+++ b/views/top.html
@@ -1,4 +1,3 @@
-<p>top html</p>
-<!-- <li ng-repeat="story in news.stories">
-  <p>{{ story }}</p>
-</li> -->
+<li ng-repeat="story in news.stories">
+  {{ story }}
+</li>
