add story.html for story component

--- a/views/story.html
+++ b/views/story.html
@@ -1,1 +1,6 @@
-<p>hello</p>
+<a href="{{story.data.url}}" class="item__title">{{story.data.title}}</a>
+<div class="item__description">
+  {{story.data.score}} points
+  by {{story.data.by}} |
+  {{story.data.kids.length}} comments
+</div>
