--- a/views/top.html
+++ b/views/top.html
@@ -1,5 +1,6 @@
-<li ng-repeat="story in news.stories">
-  {{ story }}
-  <story storyId="story">
-  </story>  
-</li>
+<div ng-repeat="story in news.stories">
+  <!-- {{ story }} -->
+  <br>
+  <story storynb="story">
+  </story>
+</div>
