add story number to display

--- a/views/top.html
+++ b/views/top.html
@@ -1,6 +1,7 @@
 <div ng-repeat="story in news.stories">
   <!-- {{ story }} -->
   <br>
+  {{news.startStoryNo}}
   <story storynb="story">
   </story>
 </div>
