add working prev next button

--- a/views/top.html
+++ b/views/top.html
@@ -1,7 +1,11 @@
 <div ng-repeat="story in news.stories">
   <!-- {{ story }} -->
   <br>
-  {{news.startStoryNo}}
+  {{news.startStoryNo + $index}}
   <story storynb="story">
   </story>
 </div>
+
+<br>
+<a ng-click="previous()" href="#">previous</a>
+<a ng-click="next()" href="#">next</a>
