start to build post state and use ui-sref

--- a/views/story.html
+++ b/views/story.html
@@ -4,4 +4,5 @@
   {{story.data.score}} points
   by {{story.data.by}} |
   {{story.data.kids.length}} comments
+  <a ui-sref="post({id: story.data.id})">More ...</a> //check https://scotch.io/tutorials/3-simple-tips-for-using-ui-router
 </div>
