add post.html and working post state

--- a/views/post.html
+++ b/views/post.html
@@ -1,1 +1,8 @@
-post.html
+<div class="post__title">
+  {{vm.data.title}}
+</div>
+<div class="post__description">
+  {{vm.data.score}} points
+  by {{vm.data.by}} |
+  {{vm.data.kids.length}} comments
+</div>
