--- a/app.css
+++ b/app.css
@@ -15,6 +15,7 @@ html, body {
 }
 
 .header__fixed {
+	font-size: 20px;
 	background: #3661A2;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	position: fixed;
@@ -70,7 +71,6 @@ html, body {
 }
 
 .pagination a {
-	display: block;
 	background: rgba(0, 0, 0, 0.1);
 	text-transform: uppercase;
 	font-size: 14px;
