--- a/views/story.html
+++ b/views/story.html
@@ -1,8 +1,10 @@
-
-<a href="{{story.data.url}}" class="item__title">{{story.data.title}}</a>
+<div class="item__title">
+  <a href="{{story.data.url}}" class="item__title">{{story.data.title}}</a>
+</div>
 <div class="item__description">
   {{story.data.score}} points
   by {{story.data.by}} |
   {{story.data.kids.length}} comments
-  <a ui-sref="post({id: story.data.id})">More ...</a> //check https://scotch.io/tutorials/3-simple-tips-for-using-ui-router
+  <a ui-sref="post({id: story.data.id})">More ...</a>
+  <div ui-view></div>
 </div>
