add recursive comments

--- a/views/comment.html
+++ b/views/comment.html
@@ -2,8 +2,7 @@
   by {{comment.data.by}}</a>
 </div>
 <div class="item__description">
-  <p ng-bind-html="comment.data.text"></p> 
-  <!-- {{comment.data.text}} -->
-  <!-- <a ui-sref="post({id: comment.data.id})">More ...</a>
-  <div ui-view></div>  -->
+  <p ng-bind-html="comment.data.text"></p>
+  <a ui-sref="post({id: comment.data.id})">Comments</a>
+  <div ui-view></div>  
 </div>
