--- a/views/story.html
+++ b/views/story.html
@@ -5,6 +5,6 @@
   {{story.data.score}} points
   by {{story.data.by}} |
   {{story.data.kids.length}} comments
-  <a ui-sref="post({id: story.data.id})">More ...</a>
+  <a ui-sref="post({id: story.data.id})">Comments ...</a>
   <div ui-view></div>
 </div>
