--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,7 +1,8 @@
-<div class="stories">
+<div class="posts">
+  item
   <ul>
-    <li ng-repeat="story in ctrl.stories">
-      item
+    <li ng-repeat="post in top.posts">
+      post
     </li>
   </ul>
 
