--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,9 +1,17 @@
 <div class="posts">
-  item
   <ul>
     <li ng-repeat="post in top.posts">
-      post
+      <item id="post"></item>
     </li>
   </ul>
+
+<div class="paginate">
+  <div ng-if="top.page > 0">
+    <a href="" ng-click="top.previousPage()">Prev..</a>
+  </div>
+  <div ng-if="top.page < top.pageCount">
+    <a href="" ng-click='top.nextPage()'>Next..</a>
+  </div>
+</div>
 
 </div>
