--- a/views/item.html
+++ b/views/item.html
@@ -5,4 +5,9 @@
   <p>Published {{item.data.time | date: longDate}}</p>
   <p>Score: {{item.data.score}}</p>
   <p>Has {{item.data.kids.length}} comments</p>
+  <div ng-if='item.data.type === "comment" && item.data.kids'>
+    <ul class="comment">
+      <li ng-repeat='comment in item.data.kids'><item id='comment'></item></li>
+    </ul>
+  </div>
 </div>
